syntax = "proto3";
package seiprotocol.seichain.dex;

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";
import "dex/pair.proto"; 
import "gogoproto/gogo.proto";

message TickSize {
  Pair pair = 1 [
    (gogoproto.jsontag) = "pair"
  ];
  string ticksize = 2 [
    (gogoproto.moretags)   = "yaml:\"tick_size\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false,
    (gogoproto.jsontag) = "tick_size"
  ];
  string contractAddr = 3 [
    (gogoproto.moretags)   = "yaml:\"tick_size\"",
    (gogoproto.jsontag) = "contract_addr"
  ];
}